infra/gateway/routes/food-app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: food-app-routes
  namespace: recipe
spec:
  parentRefs:
    - name: food-app-gateway
  hostnames:
    - recipe.dev
    - recipe.staging
    - recipe.prod
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/users
      backendRefs:
        - name: auth-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: auth-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api/1/recipes
      backendRefs:
        - name: recipe-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api/1/profile
      backendRefs:
        - name: userprofile-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api/1/ingredient
      backendRefs:
        - name: ingredient-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api/1/uploads
      backendRefs:
        - name: uploads-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: recipe-client-service
          port: 3000
